--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL=postgres://neondb_owner:npg_Jd4RCHrf9Zxb@ep-crimson-dust-a67lq0dx-pooler.us-west-2.aws.neon.tech/neondb?sslmode=require
