--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "@prisma/client": "^6.8.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "node-fetch": "^2.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
