tweak vercel.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "prisma generate && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "vercel:dev": "vercel dev --port 3001"
   },
   "dependencies": {
     "@prisma/client": "^6.8.2",
