--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
     {
       "source": "/api/spotify-proxy/(.*)",
       "destination": "/api/[...spotify-proxy].js?proxyPath=$1"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/"
     }
   ]
 }
