--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   "dependencies": {
     "@prisma/client": "^6.8.2",
     "cors": "^2.8.5",
+    "csv-parse": "^5.6.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "node-fetch": "^2.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "string-similarity": "^4.0.4"
   },
   "devDependencies": {
+    "@types/next": "^8.0.7",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "prisma": "^6.8.2",
