fixing playlist sync

--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,16 @@
       "destination": "/api/test/[...catchall].js"
     },
     {
+      "source": "/api/spotify-proxy",
+      "destination": "/api/[...spotify-proxy].js"
+    },
+    {
       "source": "/api/spotify-proxy/(.*)",
       "destination": "/api/[...spotify-proxy].js?proxyPath=$1"
+    },
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
     },
     {
       "source": "/(.*)",
