installed web app functionality 20250520170226

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Trapt",
-  "short_name": "Trapt",
+  "name": "TRAPT",
+  "short_name": "TRAPT",
   "start_url": "/now-playing",
   "display": "standalone",
   "background_color": "#000000",
