--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.14.2",
-    "string-similarity": "^4.0.4"
+    "string-similarity": "^4.0.4",
+    "swr": "^2.3.3"
   },
   "devDependencies": {
     "@types/next": "^8.0.7",
