put previous track in local storage

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.14.2",
     "string-similarity": "^4.0.4",
-    "swr": "^2.3.3"
+    "swr": "^2.3.3",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@types/next": "^8.0.7",
