--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "TRAPT",
   "start_url": "/now-playing",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#000000",
+  "background_color": "#18181b",
+  "theme_color": "#18181b",
   "icons": [
     {
       "src": "/apple-touch-icon.png",
